--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         const contacts = [
             {
                 id: 1,
-                name: "John Smith",
+                name: "ثامر الحنون 1",
                 avatar: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23008069'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z'%3E%3C/svg%3E",
                 lastMessage: "Hey, how's it going?",
                 timestamp: "10:30 AM",
@@ -202,7 +202,7 @@
             },
             {
                 id: 2,
-                name: "Sarah Johnson",
+                name: "ثامر الحنون 2",
                 avatar: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23e91e63'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z'%3E%3C/svg%3E",
                 lastMessage: "Can you send me the files?",
                 timestamp: "Yesterday",
@@ -212,7 +212,7 @@
             },
             {
                 id: 3,
-                name: "David Wilson",
+                name: "ثامر الحنون 3",
                 avatar: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%233f51b5'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z'%3E%3C/svg%3E",
                 lastMessage: "Meeting at 3 PM tomorrow",
                 timestamp: "Yesterday",
@@ -222,7 +222,7 @@
             },
             {
                 id: 4,
-                name: "Emily Brown",
+                name: "ثامر الحنون 4",
                 avatar: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ff9800'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z'%3E%3C/svg%3E",
                 lastMessage: "Thanks for your help!",
                 timestamp: "Tuesday",
@@ -232,7 +232,7 @@
             },
             {
                 id: 5,
-                name: "Michael Davis",
+                name: "ثامر الحنون 5",
                 avatar: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%234caf50'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z'%3E%3C/svg%3E",
                 lastMessage: "Are we still on for lunch?",
                 timestamp: "Monday",
