--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
             },
             {
                 id: 5,
-                name: "جبهات ثامر",
-                avatar: "img.jpg",
+                name: "ثامر الحنون 5",
+                avatar: "q.jpg",
                 lastMessage: "Are we still on for lunch?",
                 timestamp: "Monday",
                 unread: 0,
