Update and rename test.html to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     top: 0px;
 " onclick="window.location.href = 'http://192.168.1.109/1/welcome/app2.php'; "></button>-->
 <h1 class="text">whatsdown</h1>
-<img src="q.webp" class="t" onclick="window.location.href = '2.html'; ">
+<img src="q.webp" class="t" onclick="window.location.href = 'whatsdown.html'; ">
 <style>
 :root{
 --color:white;
