--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html style="overflow: hidden;">
 <head>
 <title>Ihsan + osama</title>
-<link rel="icon" type="image/png" href="2.png"/>
+<link rel="icon" type="image/png" href="q.webp"/>
 </head>
 <body>
 <!--<BUTTON style="    border: 0px;
