--- a/whatsdown.html
+++ b/whatsdown.html
@@ -240,15 +240,17 @@
 
         // Sample messages for each contact
         const conversations = {
-            1: [
-                { sent: false, text: "Hey there! How are you?", time: "10:15 AM", read: true },
-                { sent: true, text: "I'm good, thanks! How about you?", time: "10:20 AM", read: true },
-                { sent: false, text: "Doing well. Are you coming to the meeting today?", time: "10:22 AM", read: true },
-                { sent: true, text: "Yes, I'll be there. What time is it again?", time: "10:25 AM", read: true },
-                { sent: false, text: "It's at 2 PM in the main conference room.", time: "10:26 AM", read: true },
-                { sent: false, text: "Don't forget to bring your laptop!", time: "10:26 AM", read: true },
-                { sent: true, text: "Got it, thanks for the reminder!", time: "10:28 AM", read: true },
-                { sent: false, text: "Hey, how's it going?", time: "10:30 AM", read: false }
+              1: [
+                { sent: false, text: "السلام عليكم ورحمة الله وبركاته", time: "10:15 AM", read: true },
+                { sent: true, text: "وعليكم السلام ورمة الله , كيف الحال", time: "10:20 AM", read: true },
+                { sent: false, text: "الحمدلله , انت كيف حالك", time: "10:22 AM", read: true },
+                { sent: true, text: "والله الحمدلله اذا انت بخير احنا بخير", time: "10:25 AM", read: true },
+                { sent: false, text: "الله يسعدك ممكن طلب بسيط ؟", time: "10:26 AM", read: true },
+                { sent: false, text: "آمر ", time: "10:26 AM", read: true },
+                { sent: true, text: "بدي بس تقولي واجب الرياضيات صفحة كم", time: "10:28 AM", read: true },
+                { sent: false, text: "واجب الرياضيات صفحة 145", time: "10:30 AM", read: false },
+                { sent: false, text: "الله يعطيك العافية ما قصرت", time: "10:31 AM", read: false },
+                { sent: false, text: "الله يعافيك", time: "10:32 AM", read: false }
             ],
             2: [
                 { sent: false, text: "Hi! Do you have those project files ready?", time: "Yesterday, 3:45 PM", read: true },
