--- a/whatsdown.html
+++ b/whatsdown.html
@@ -246,10 +246,10 @@
                 { sent: false, text: "الحمدلله , انت كيف حالك", time: "10:22 AM", read: true },
                 { sent: true, text: "والله الحمدلله اذا انت بخير احنا بخير", time: "10:25 AM", read: true },
                 { sent: false, text: "الله يسعدك ممكن طلب بسيط ؟", time: "10:26 AM", read: true },
-                { sent: false, text: "آمر ", time: "10:26 AM", read: true },
+                { sent: false, text: "آمر ", time: "10:26 AM", read: false },
                 { sent: true, text: "بدي بس تقولي واجب الرياضيات صفحة كم", time: "10:28 AM", read: true },
                 { sent: false, text: "واجب الرياضيات صفحة 145", time: "10:30 AM", read: false },
-                { sent: false, text: "الله يعطيك العافية ما قصرت", time: "10:31 AM", read: false },
+                { sent: false, text: "الله يعطيك العافية ما قصرت", time: "10:31 AM", read: true },
                 { sent: false, text: "الله يعافيك", time: "10:32 AM", read: false }
             ],
             2: [
