--- a/whatsdown.html
+++ b/whatsdown.html
@@ -194,10 +194,11 @@
             {
                 id: 1,
                 name: "ثامر الحنون 1",
-                lastMessage: "Hey, how's it going?",
+                lastMessage: "الله يعافيك",
                 timestamp: "10:30 AM",
                 unread: 2,
                 online: true,
+                avatar: "q.jpg",
                 status: "online"
             },
             {
@@ -207,6 +208,7 @@
                 timestamp: "Yesterday",
                 unread: 0,
                 online: true,
+                avatar: "q.jpg",
                 status: "typing..."
             },
             {
@@ -216,6 +218,7 @@
                 timestamp: "Yesterday",
                 unread: 0,
                 online: false,
+                avatar: "q.jpg",
                 status: "last seen today at 2:45 PM"
             },
             {
@@ -225,6 +228,7 @@
                 timestamp: "Tuesday",
                 unread: 0,
                 online: false,
+                avatar: "q.jpg",
                 status: "last seen yesterday at 8:30 PM"
             },
             {
@@ -234,6 +238,7 @@
                 timestamp: "Monday",
                 unread: 0,
                 online: true,
+                avatar: "q.jpg",
                 status: "online"
             }
         ];
