--- a/whatsdown.html
+++ b/whatsdown.html
@@ -193,7 +193,7 @@
         const contacts = [
             {
                 id: 1,
-                name: "ثامر الحنون 1",
+                name: "test1",
                 lastMessage: "الله يعافيك",
                 timestamp: "10:30 AM",
                 unread: 2,
@@ -203,7 +203,7 @@
             },
             {
                 id: 2,
-                name: "ثامر الحنون 2",
+                name: "test2",
                 lastMessage: "Can you send me the files?",
                 timestamp: "Yesterday",
                 unread: 0,
@@ -213,7 +213,7 @@
             },
             {
                 id: 3,
-                name: "ثامر الحنون 3",
+                name: "test3",
                 lastMessage: "Meeting at 3 PM tomorrow",
                 timestamp: "Yesterday",
                 unread: 0,
@@ -223,7 +223,7 @@
             },
             {
                 id: 4,
-                name: "ثامر الحنون 4",
+                name: "test4",
                 lastMessage: "Thanks for your help!",
                 timestamp: "Tuesday",
                 unread: 0,
@@ -233,7 +233,7 @@
             },
             {
                 id: 5,
-                name: "ثامر الحنون 5",
+                name: "test5",
                 lastMessage: "Are we still on for lunch?",
                 timestamp: "Monday",
                 unread: 0,
