--- a/whatsdown.html
+++ b/whatsdown.html
@@ -231,8 +231,20 @@
                 avatar: "q.jpg",
                 status: "last seen yesterday at 8:30 PM"
             },
-            number = 23;
-        number2 = 0 ;
+                    {
+                id: 5,
+                name: "test"+number2,
+                lastMessage: "Are we still on for lunch?",
+                timestamp: "Monday",
+                unread: 0,
+                online: true,
+                avatar: "q.jpg",
+                status: "online"
+            }
+        ];
+
+                    number = 23;
+        number2 = 6 ;
         while(number > number2){
             {
                 id: number2,
@@ -244,18 +256,8 @@
                 avatar: "q.jpg",
                 status: "online"
             }
+            number2 += 1 ;
         }
-                    {
-                id: number2++,
-                name: "test"+number2,
-                lastMessage: "Are we still on for lunch?",
-                timestamp: "Monday",
-                unread: 0,
-                online: true,
-                avatar: "q.jpg",
-                status: "online"
-            }
-        ];
 
         // Sample messages for each contact
         const conversations = {
