--- a/whatsdown.html
+++ b/whatsdown.html
@@ -233,7 +233,7 @@
             },
                     {
                 id: 5,
-                name: "test"+number2,
+                name: "test5",
                 lastMessage: "Are we still on for lunch?",
                 timestamp: "Monday",
                 unread: 0,
