--- a/whatsdown.html
+++ b/whatsdown.html
@@ -246,9 +246,10 @@
                     number = 23;
         number2 = 6 ;
         while(number > number2){
+            name = "test"+number2;
             {
                 id: number2,
-                name: "test"+number2,
+                name: name ,
                 lastMessage: "Are we still on for lunch?",
                 timestamp: "Monday",
                 unread: 0,
