--- a/whatsdown.html
+++ b/whatsdown.html
@@ -257,7 +257,7 @@
                 { sent: true, text: "بدي بس تقولي واجب الرياضيات صفحة كم", time: "10:28 AM", read: true },
                 { sent: false, text: "واجب الرياضيات صفحة 145", time: "10:30 AM", read: false },
                 { sent: true, text: "الله يعطيك العافية ما قصرت", time: "10:31 AM", read: false },
-                { sent: true, text: "الله يعافيك", time: "10:32 AM", read: false }
+                { sent: false, text: "الله يعافيك", time: "10:32 AM", read: false }
             ],
             2: [
                 { sent: false, text: "Hi! Do you have those project files ready?", time: "Yesterday, 3:45 PM", read: true },
