--- a/whatsdown.html
+++ b/whatsdown.html
@@ -193,7 +193,7 @@
         const contacts = [
             {
                 id: 1,
-                name: "ثامر الحنون (بس مش حنون)",
+                name: "test1",
                 lastMessage: "الله يعافيك",
                 timestamp: "10:30 AM",
                 unread: 2,
@@ -203,7 +203,7 @@
             },
             {
                 id: 2,
-                name: "نور السحبة ",
+                name: "test2",
                 lastMessage: "Can you send me the files?",
                 timestamp: "Yesterday",
                 unread: 0,
@@ -213,7 +213,7 @@
             },
             {
                 id: 3,
-                name: "حمزة ابو علي",
+                name: "test3",
                 lastMessage: "Meeting at 3 PM tomorrow",
                 timestamp: "Yesterday",
                 unread: 0,
@@ -223,7 +223,7 @@
             },
             {
                 id: 4,
-                name: "تيجانييييي",
+                name: "test4",
                 lastMessage: "Thanks for your help!",
                 timestamp: "Tuesday",
                 unread: 0,
@@ -233,7 +233,7 @@
             },
                     {
                 id: 5,
-                name: "نور السحبة",
+                name: "test5",
                 lastMessage: "Are we still on for lunch?",
                 timestamp: "Monday",
                 unread: 0,
@@ -260,19 +260,19 @@
                 { sent: false, text: "الله يعافيك", time: "10:32 AM", read: false }
             ],
             2: [
-                { sent: false, text: "كووول خرا تفوت بطيزي", time: "Yesterday, 3:45 PM", read: true },
-                { sent: true, text: "تفوط بطيزي تحميله", time: "Yesterday, 4:00 PM", read: true },
-                { sent: false, text: "لف واشلح", time: "Yesterday, 4:05 PM", read: true },
-                { sent: true, text: "يلا!!", time: "Yesterday, 4:10 PM", read: true },
-                { sent: false, text: "قدام", time: "Yesterday, 5:30 PM", read: true }
+                { sent: false, text: "السلام عليكم", time: "Yesterday, 3:45 PM", read: true },
+                { sent: true, text: "وعليكم السلام", time: "Yesterday, 4:00 PM", read: true },
+                { sent: false, text: "كيف الحال", time: "Yesterday, 4:05 PM", read: true },
+                { sent: true, text: "الحمدلله", time: "Yesterday, 4:10 PM", read: true },
+                { sent: false, text: "الحمدلله دائما وابدا", time: "Yesterday, 5:30 PM", read: true }
             ],
             3: [
-                { sent: true, text: "برشلونه عمك", time: "Yesterday, 1:15 PM", read: true },
-                { sent: false, text: "برشلونه عمك", time: "Yesterday, 1:20 PM", read: true },
-                { sent: true, text: "برشلونه عمك", time: "Yesterday, 1:22 PM", read: true },
-                { sent: false, text: "تخسي الانتر عمك", time: "Yesterday, 1:25 PM", read: true },
-                { sent: true, text: "برشلونه عمك", time: "Yesterday, 1:30 PM", read: true },
-                { sent: false, text: "برشلونه عمك", time: "Yesterday, 5:45 PM", read: true }
+                { sent: true, text: "yooo", time: "Yesterday, 1:15 PM", read: true },
+                { sent: false, text: "yo wssp ", time: "Yesterday, 1:20 PM", read: true },
+                { sent: true, text: "good wbu?", time: "Yesterday, 1:22 PM", read: true },
+                { sent: false, text: "fine thank u", time: "Yesterday, 1:25 PM", read: true },
+                { sent: true, text: "wanna go hang?", time: "Yesterday, 1:30 PM", read: true },
+                { sent: false, text: "sure", time: "Yesterday, 5:45 PM", read: true }
             ],
             4: [
                 { sent: false, text: "Hi there! I need some help with the report.", time: "Tuesday, 11:30 AM", read: true },
